--- a/data/prefixsuffix.glade
+++ b/data/prefixsuffix.glade
@@ -3,7 +3,7 @@
 <!--*- mode: xml -*-->
 <interface>
   <requires lib="gtk+" version="3.0"/>
-  <object class="GtkWindow" id="window">
+  <object class="GtkApplicationWindow" id="window">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">window1</property>
     <child>
